*.change MIT > mit *.常规提交

--- a/bin/config.ini
+++ b/bin/config.ini
@@ -1,10 +1,16 @@
+[Server]
+# 服务地址，可为空
+localIP =
+# 服务端口
+localPort = 8080
+
 [znlib]
 # 启用日志
 EnableLogger = true
 
 [logger]
 # 日志文件目录
-filePath = logs
+filePath = $path\logs
 # 日志文件名称
 filename = app.log
 # 日志级别 trace,debug,info,warning,error,fatal,panic
